--- a/02-bicimlendirme.html
+++ b/02-bicimlendirme.html
@@ -7,64 +7,79 @@
     <h1>Frontend Development</h1>
     <h3>HTML Tagları</h3>
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
+      Lorem <sub>2</sub> , ipsum <sup>2</sup> dolor sit amet consectetur
+      adipisicing elit. Officiis tempora ea officia rerum quisquam suscipit odio
+      ducimus sed reprehenderit dolorem animi, rem deserunt laborum quaerat
+      corrupti necessitatibus iure vel. Lorem, ipsum dolor sit amet consectetur
+      adipisicing elit. Officiis tempora ea officia rerum quisquam suscipit odio
+      ducimus sed reprehenderit dolorem animi, rem deserunt laborum quaerat
+      corrupti necessitatibus iure vel. Lorem, ipsum dolor sit amet consectetur
+      adipisicing elit. Officiis tempora ea officia rerum quisquam suscipit odio
+      ducimus sed reprehenderit dolorem animi, rem deserunt laborum quaerat
+      corrupti necessitatibus iure vel. Lorem, ipsum dolor
+      <mark> sit amet consectetur </mark>adipisicing elit. Officiis tempora ea
+      officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
       animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem, ipsum dolor <br> sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni quae cum
-      tenetur error obcaecati. Nulla, odit sunt aperiam reprehenderit aliquam
-      assumenda nesciunt consequatur minima nam impedit iusto quam id vero? Nemo
-      sunt, placeat, nobis tempore iure perspiciatis nisi magnam cumque
-      obcaecati, quaerat dolorem repellendus in amet soluta labore quidem
-      suscipit impedit. Veniam ullam dicta qui ut in, voluptate deleniti
-      excepturi! Commodi in cupiditate voluptas architecto aut quidem delectus
-      similique. Ut recusandae quidem maiores, atque magnam at asperiores et
-      tempore. Fuga assumenda nulla quidem voluptas exercitationem omnis
-      accusantium, repellat dicta rerum.
+      Lorem, ipsum dolor <br />
+      sit amet consectetur adipisicing elit. Officiis tempora ea officia rerum
+      quisquam suscipit odio ducimus sed reprehenderit dolorem animi, rem
+      deserunt laborum quaerat corrupti necessitatibus iure vel. Lorem ipsum
+      dolor, sit amet consectetur adipisicing elit. Magni quae cum tenetur error
+      obcaecati. Nulla, odit sunt aperiam reprehenderit aliquam assumenda
+      nesciunt consequatur minima nam impedit iusto quam id vero? Nemo sunt,
+      placeat, nobis tempore iure perspiciatis nisi magnam cumque obcaecati,
+      quaerat dolorem repellendus in amet soluta labore quidem suscipit impedit.
+      Veniam ullam dicta qui ut in, voluptate deleniti excepturi! Commodi in
+      cupiditate voluptas architecto aut quidem delectus similique. Ut
+      recusandae quidem maiores, atque magnam at asperiores et tempore. Fuga
+      assumenda nulla quidem voluptas exercitationem omnis accusantium, repellat
+      dicta rerum.
     </p>
 
-    <hr>
+    <hr />
     <!-- hr tagı yatay çizgi çekmek için kullanılır.-->
     <h3>CSS Komutları</h3>
     <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
       ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
       animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
       ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem, ipsum dolor <br> sit amet consectetur adipisicing elit. Officiis tempora
-      ea officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
-      animi, rem deserunt laborum quaerat corrupti necessitatibus iure vel.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni quae cum
-      tenetur error obcaecati. Nulla, odit sunt aperiam reprehenderit aliquam
-      assumenda nesciunt consequatur minima nam impedit iusto quam id vero? Nemo
-      sunt, placeat, nobis tempore iure perspiciatis nisi magnam cumque
-      obcaecati, quaerat dolorem repellendus in amet soluta labore quidem
-      suscipit impedit. Veniam ullam dicta qui ut in, voluptate deleniti
-      excepturi! Commodi in cupiditate voluptas architecto aut quidem delectus
-      similique. Ut recusandae quidem maiores, atque magnam at asperiores et
-      tempore. Fuga assumenda nulla quidem voluptas exercitationem omnis
-      accusantium, repellat dicta rerum.
+      animi, rem deserunt
+      <strong> laborum quaerat corrupti</strong> necessitatibus iure vel. Lorem,
+      ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora ea
+      officia rerum quisquam suscipit odio ducimus sed reprehenderit dolorem
+      animi, rem deserunt laborum <b> quaerat corrupti</b> necessitatibus iure
+      vel. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis
+      tempora ea officia rerum <del> quisquam </del>suscipit odio ducimus sed
+      reprehenderit dolorem animi, rem deserunt laborum quaerat corrupti
+      necessitatibus iure vel. Lorem, ipsum dolor <br />
+      sit amet consectetur adipisicing elit. Officiis tempora ea officia rerum
+      quisquam suscipit odio ducimus sed reprehenderit dolorem animi, rem
+      <em> deserunt </em>laborum quaerat corrupti necessitatibus iure vel. Lorem
+      ipsum dolor, sit amet consectetur adipisicing elit. Magni quae cum tenetur
+      error obcaecati. Nulla, odit sunt aperiam reprehenderit aliquam assumenda
+      <strong>
+        nesciunt consequatur minima nam impedit iusto quam id vero? Nemo sunt,
+        placeat, nobis tempore iure perspiciatis nisi magnam cumque obcaecati,
+        quaerat dolorem repellendus in amet soluta labore quidem suscipit
+        impedit. Veniam ullam dicta qui ut in, voluptate</strong
+      >
+      deleniti excepturi! Commodi in cupiditate voluptas architecto aut quidem
+      delectus similique. Ut recusandae
+      <u> quidem maiores, atque magnam at asperiores et tempore.</u> Fuga
+      assumenda nulla quidem voluptas exercitationem omnis accusantium,
+      <del> repellat dicta rerum. </del>
     </p>
 
     &lt;p&gt;: P tagı paragraf oluşturmak için
+
+    <pre>
+      Lorem          ipsum 
+      dolor sit.
+    </pre>
   </body>
 </html>
+
+
+>
