--- a/02-bicimlendirme.html
+++ b/02-bicimlendirme.html
@@ -63,8 +63,7 @@
         nesciunt consequatur minima nam impedit iusto quam id vero? Nemo sunt,
         placeat, nobis tempore iure perspiciatis nisi magnam cumque obcaecati,
         quaerat dolorem repellendus in amet soluta labore quidem suscipit
-        impedit. Veniam ullam dicta qui ut in, voluptate</strong
-      >
+        impedit. Veniam ullam dicta qui ut in, voluptate</strong>
       deleniti excepturi! Commodi in cupiditate voluptas architecto aut quidem
       delectus similique. Ut recusandae
       <u> quidem maiores, atque magnam at asperiores et tempore.</u> Fuga
@@ -72,8 +71,8 @@
       <del> repellat dicta rerum. </del>
     </p>
 
-    &lt;p&gt;: P tagı paragraf oluşturmak için
-
+    &lt;p&gt;: P tagı paragraf oluşturmak için <br>
+    &lt;t&gt;: T tagı oluşturmak için
     <pre>
       Lorem          ipsum 
       dolor sit.
