--- a/05-link.html
+++ b/05-link.html
@@ -9,11 +9,15 @@
 <body>
     <ul>
         <li><a href="03-practise.html">Practise</a></li>
-        <li><a href="#reactjs">React</a></li>
+        <li><a href="#reactjs" title="React uygulamalarında useEffect kullanımı">React</a></li>
         <li><a href="04-listeler.html#js">Listeler(Javascript)</a></li>
-        <li><a href="">Link</a></li>
-        <li><a href="">Link</a></li>
-        <li><a href="">Link</a></li>
+        <li><a href="https://www.google.com" target="_blank">Go to Google</a></li>
+        <li><a href="../img/marek-piwnicki-G_6kPyje9Lk-unsplash.jpg">Click to open image</a></li>
+        <li><a href="../docs/HTML5NotesForProfessionals.pdf">Click to open HTML Notes</a></li>
+        <li><a href="../docs/CSSNotesForProfessionals.zip">Click to open CSS notes</a></li>
+        <li><a href="mailto:ozguraktas.55555@gmail.com">Send Mail</a></li>
+        <li><a href="tel:+05388634087">Call me</a></li>
+        <li><a href="https://wa.me/15551234567">Whatsapp</a></li>
     </ul>
 
     <h2>HTML</h2>
@@ -32,3 +36,5 @@
     <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, consequatur sequi? Autem consectetur odit quis harum doloremque animi qui voluptate laudantium dolorem totam magni rerum temporibus, suscipit provident cum adipisci?</span><span>Expedita ratione, ex soluta accusamus officia non alias delectus ipsam facilis. Tempora corporis dolorem provident eum commodi eligendi deleniti beatae maiores enim, nobis delectus? Dignissimos id voluptate reiciendis non explicabo!</span><span>Fuga eligendi excepturi, voluptatum tempore quibusdam maxime, quis beatae placeat facere eos sequi. Dolorum tempore accusantium ipsa facilis ab doloribus reprehenderit obcaecati, laboriosam sapiente aperiam odio hic et. Neque, inventore!</span><span>Ipsum, repudiandae nisi necessitatibus vero, nihil amet nesciunt quis, ad nam sunt delectus nobis! Ab, corporis optio ullam, totam, sequi ipsa quaerat cupiditate ratione consectetur dignissimos aliquam culpa error quis!</span><span>Unde perspiciatis veritatis dicta illum. Aliquam laudantium doloribus officia neque iure ratione nesciunt ipsa! Consectetur suscipit repudiandae porro accusamus expedita dolores veritatis doloribus nam incidunt minus omnis, tempora aliquid pariatur?</span></p>
 </body>
 </html>
+
+
